# OpenNfr_E2_Gui-6.4

./: README.md  configure.ac  mytest.py  skin.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CustomSubservices/: plugin.py
lib/python/Plugins/Extensions/Infopanel/: Flash_local.py  InstallTarGZ.py  Makefile.am  PluginReLoad.py  QuickMenu.py  SoftwarePanel.py  SpinnerSelectionBox.py  SpinnerSelector.py  bootlogo.py  bootvideo.py  diskspeed.py  eparted.py  oscamsmartcard.py  outofflash.py  plugin.py
lib/python/Plugins/Extensions/Infopanel/data/: Makefile.am
lib/python/Plugins/Extensions/MediaPlayer/: __init__.pyo  plugin.pyo  settings.pyo
lib/python/Plugins/Extensions/MediaPortal/: LICENSE  Makefile.am  __init__.py  keymap.xml  plugin.py
lib/python/Plugins/Extensions/MediaPortal/additions/: Makefile.am  additions.xml  additions_user.xml
lib/python/Plugins/Extensions/MediaPortal/images/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/locale/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/resources/: DelayedFunction.py  MPEuronewsUriResolver.py  MPHLSPUriResolver.py  MPYoutubeUriResolver.py  Makefile.am  __init__.py  aes_crypt.py  animations.xml  api.py  cannalink.py  choiceboxext.py  config.py  configlistext.py  coverhelper.py  cvevosignalgoextractor.py  debuglog.py  decrypt.py  eightieslink.py  imports.py  jsunpacker.py  keyboardext.py  (+30 more)
lib/python/Plugins/Extensions/MediaScanner/: plugin.py
lib/python/Plugins/Extensions/QuadPip/: qpip.py
lib/python/Plugins/Extensions/mpgz/: Makefile.am  plugin.py  update.py
(+451 files in other folders)
